archive_entities_helm/templates/ray/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ray
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/rule-type: PathPrefixStrip
spec:
  rules:
  - http:
      paths:
      - path: /ray
        pathType: Prefix
        backend:
          service:
            name: raycluster-head-svc
            port:
              number: 8265
